PR fixes: level min + dark mode + css mobile

--- a/extension/scripts/features/jailfilter/ttJailFilter.css
+++ b/extension/scripts/features/jailfilter/ttJailFilter.css
@@ -22,11 +22,19 @@
 	justify-content: space-between;
 }
 
+body.tt-mobile .tt-jail-filters-content {
+	flex-direction: column;
+}
+
 .tt-jail-filters-item {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	padding: 0 5px;
+}
+
+body.tt-mobile .tt-jail-filters-item {
+	margin: 10px 0;
 }
 
 .tt-jail-filters-item-header {
